--- a/lang/python3-pip/Makefile
+++ b/lang/python3-pip/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=python3-pip
 PKG_VERSION:=7.1.2
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 
 PKG_SOURCE:=pip-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://pypi.python.org/packages/source/p/pip/
@@ -30,6 +30,7 @@ define Package/python3-pip
 	TITLE:=Tool for installing Python $(PYTHON3_VERSION) packages.
 	URL:=https://pip.pypa.io
 	DEPENDS:=+python3 +python3-dev +python3-lib2to3 +python3-setuptools
+	MAINTAINER:=Alexandru Ardelean <ardeleanalex@gmail.com>
 endef
 
 define Package/python3-pip/description
@@ -38,35 +39,15 @@ endef
 
 define Build/Compile
 	$(call Build/Compile/Py3Mod,,\
-		install --prefix="$(PKG_INSTALL_DIR)/usr" \
+		install --root="$(PKG_INSTALL_DIR)" --prefix="/usr" \
+		--single-version-externally-managed \
 	)
 endef
 
-PYTHON3_PIP_PKG_DIR:=$(PYTHON3_PKG_DIR)/pip-$(PKG_VERSION)-py$(PYTHON3_VERSION).egg/pip
 define Py3Package/python3-pip/filespec
 +|$(PYTHON3_PKG_DIR)
--|$(PYTHON3_PIP_PKG_DIR)/_vendor/distlib/*.exe
--|$(PYTHON3_PIP_PKG_DIR)/utils/outdated.py
-endef
-
-# Backup these files, so that they do not clash with python3-setuptools
-# If we install python3-pip python3-setuptools, we want these to be replaced,
-# since python3-pip replaces python3-setuptools (when installed)
-define Package/python3-pip/preinst
-#!/bin/sh
-cd "$${IPKG_INSTROOT}$(PYTHON3_PKG_DIR)"
-[ -f easy-install.pth ] && mv -f easy-install.pth easy-install.pth.setuptools
-[ -f site.py ] && mv -f site.py site.py.setuptools
-exit 0
-endef
-
-# And put them back on remove
-define Package/python3-pip/postrm
-#!/bin/sh
-cd "$${IPKG_INSTROOT}$(PYTHON3_PKG_DIR)"
-[ -f easy-install.pth.setuptools ] && mv -f easy-install.pth.setuptools easy-install.pth
-[ -f site.py.setuptools ] && mv -f site.py.setuptools site.py
-exit 0
+-|$(PYTHON3_PKG_DIR)/_vendor/distlib/*.exe
+-|$(PYTHON3_PKG_DIR)/utils/outdated.py
 endef
 
 define Py3Package/python3-pip/install
